fix wrapping text

--- a/src/style.css
+++ b/src/style.css
@@ -115,8 +115,6 @@
     height: 70px;
     margin-right: 15px;
     flex-shrink: 0;
-    border-radius: 50%;
-    overflow: hidden;
 
     @media (min-width: 768px) {
       width: 100px;
@@ -136,24 +134,25 @@
     height: 100%;
     top: 0;
     left: 0;
+    border-radius: 50%;
     background-color: var(--ui-media-bg);
     object-fit: cover;
   }
 
   &__content {
     display: flex;
-    max-width: calc(100% - 85px);
+    max-width: calc(100% - 86px);
     min-height: 70px;
     flex-direction: column;
     justify-content: center;
 
     @media (min-width: 768px) {
-      max-width: calc(100% - 130px);
+      max-width: calc(100% - 132px);
       min-height: 100px;
     }
 
     @media (min-width: 992px) {
-      max-width: calc(100% - 200px);
+      max-width: calc(100% - 202px);
       min-height: 170px;
     }
   }
